Create a Update User Controllers and Subcription model
