# BACKEND_CODE/src/routes/user.routes.js
@@ -1,11 +1,16 @@
 import { Router } from 'express';
 import {
   GenerateNewRefreshTokenController,
+  GetCurrentUser,
   LoginUserController,
   LogoutUserController,
   RegisterUserController,
+  UpdateAvatarController,
+  UpdateCoverImageController,
+  UpdatePasswordController,
+  UpdateUserDetailsController,
 } from '../controllers/user.controller.js';
-import { multiUpload } from '../middlewares/multer.Middleware.js';
+import { multiUpload, upload } from '../middlewares/multer.Middleware.js';
 import { verifyJWT } from '../middlewares/authMiddle.middleware.js';
 const UserRouter = Router();
 
@@ -19,4 +24,26 @@ UserRouter.route('/refresh-token').post(GenerateNewRefreshTokenController);
 
 //+++++++++++ Secure Routes ++++++
 UserRouter.route('/logout').post(verifyJWT, LogoutUserController);
+
+//Update Password Controller
+UserRouter.route('/updatePassword').put(verifyJWT, UpdatePasswordController);
+
+// get Login User Details
+UserRouter.route('/get-user-details').get(verifyJWT, GetCurrentUser);
+
+// Update User Details
+UserRouter.route('/update-user').post(verifyJWT, UpdateUserDetailsController);
+
+// Avatr Images Upadate Route
+UserRouter.route('/update/user-avatar').post(
+  verifyJWT,
+  upload.single('avatar'),
+  UpdateAvatarController,
+);
+
+UserRouter.route('/update/user-coverimage').post(
+  verifyJWT,
+  upload.single('coverimage'),
+  UpdateCoverImageController,
+);
 export default UserRouter;
